--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,6 @@
+ArcticUserBundle:
+    resource: "@ArcticUserBundle/Resources/config/routing.yml"
+
 ArcticAssetBundle:
     resource: "@ArcticAssetBundle/Controller/"
     type:     annotation
