--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -11,7 +11,12 @@ framework:
     form:            true
     csrf_protection: true
     validation:      { enable_annotations: true }
-    templating:      { engines: ['twig'] } #assets_version: SomeVersionScheme
+    templating:      
+        form:
+            resources:
+                - 'FrameworkBundle:FormTable'
+        engines: ['twig']  #assets_version: SomeVersionScheme
+
     session:
         default_locale: %locale%
         auto_start:     true
