--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -12,9 +12,6 @@ framework:
     csrf_protection: true
     validation:      { enable_annotations: true }
     templating:      
-        form:
-            resources:
-                - 'FrameworkBundle:FormTable'
         engines: ['twig']  #assets_version: SomeVersionScheme
 
     session:
@@ -25,6 +22,9 @@ framework:
 twig:
     debug:            %kernel.debug%
     strict_variables: %kernel.debug%
+    form:
+        resources:
+            - ':Form:fields.html.twig'
 
 # Assetic Configuration
 assetic:
