--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -68,3 +68,9 @@ fos_user:
     db_driver: orm
     firewall_name: main
     user_class: Arctic\UserBundle\Entity\User
+    registration:
+        form:
+            type: arctic_user_registration
+    profile:
+        form:
+            type: arctic_user_profile
