--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -62,9 +62,9 @@ fos_user:
     db_driver: orm
     firewall_name: main
     user_class: Arctic\UserBundle\Entity\User
-    #registration:
-    #    form:
-    #        type: arctic_user_registration
-    #profile:
-    #    form:
-    #        type: arctic_user_profile
+    registration:
+        form:
+            type: arctic_user_registration
+    profile:
+        form:
+            type: arctic_user_profile
