--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+arctic_ticket:
+    resource: "@ArcticTicketBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 ArcticUserBundle:
     resource: "@ArcticUserBundle/Resources/config/routing.yml"
 
