--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+arctic_dashboard:
+    resource: "@ArcticDashboardBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 arctic_ticket:
     resource: "@ArcticTicketBundle/Controller/"
     type:     annotation
